# rpi-sound-tester

./: .gitignore  .gitmodules  Makefile  README.md
app/: CMakeLists.txt
app/config/: default-config.json
app/src/: analysis.cpp  analysis.h  audio_engine.cpp  audio_engine.h  capture.cpp  capture.h  config.cpp  config.h  constants.h  control.h  generators.cpp  generators.h  genie.h  kmsg_watch.cpp  kmsg_watch.h  listen_encoder.cpp  listen_encoder.h  listen_stream.cpp  listen_stream.h  main.cpp  ring_buffer.h  webserver.cpp  webserver.h  ws_hub.cpp  ws_hub.h
app/src/util/: dsp.h  log.cpp  log.h  resample.h  sysinfo.cpp  sysinfo.h  wav.h
app/tests/: CMakeLists.txt  check.h  test_capture.cpp  test_config.cpp  test_dsp.cpp  test_generators.cpp  test_genie.cpp  test_opus.cpp  test_ring_buffer.cpp  test_wav.cpp
app/www/: app.js  index.html  style.css
docs/: api.md  bench-tests.md  calibration.md  headless.md  octo-known-issues.md
tools/: md2html
yocto/conf/: bblayers.conf.sample  local.conf.sample
yocto/meta-soundtester/conf/: layer.conf  soundtester-device.conf.sample
yocto/meta-soundtester/recipes-bsp/bootfiles/: rpi-config_%.bbappend
yocto/meta-soundtester/recipes-core/base-files/: base-files_%.bbappend
yocto/meta-soundtester/recipes-core/images/: soundtester-image-dev.bb  soundtester-image.bb
yocto/meta-soundtester/recipes-core/soundtester-base/: soundtester-base_1.0.bb
yocto/meta-soundtester/recipes-core/soundtester-base/files/: 10-soundtester.conf  20-wired.network  25-wireless.network  journald-volatile.conf  soundtester-sshkeys.service  soundtester-sshkeys.sh  sshd-at-early.conf  sshd-early.conf  sshdgenkeys-early.conf  wpa_supplicant-wlan0.conf
yocto/meta-soundtester/recipes-kernel/linux/: linux-raspberrypi_5.15.bb
yocto/meta-soundtester/recipes-kernel/linux/files/: 0001-ASoC-audioinjector-octo-set-the-card-owner.patch  0002-ASoC-bcm2835-i2s-only-report-SYNC-error-when-clock-master.patch  gcc13-compat.cfg  octo.cfg
yocto/meta-soundtester/recipes-soundtester/md2html/: md2html-native_1.0.bb
yocto/meta-soundtester/recipes-soundtester/soundtesterd/: soundtesterd_1.0.bb
yocto/meta-soundtester/recipes-soundtester/soundtesterd/files/: soundtesterd.service
yocto/meta-soundtester/wic/: soundtester.wks
